--- a/style.css
+++ b/style.css
@@ -667,13 +667,13 @@ button:focus-visible {
 #chat-messages-fade::before {
   top: 0;
   height: 76px;
-  background: linear-gradient(180deg, var(--body-bg), rgba(15, 15, 15, 0.7), transparent);
+  background: linear-gradient(180deg, var(--body-bg), transparent);
 }
 
 #chat-messages-fade::after {
   bottom: 0;
   height: 86px;
-  background: linear-gradient(0deg, var(--body-bg), rgba(15, 15, 15, 0.7), transparent);
+  background: linear-gradient(0deg, var(--body-bg), transparent);
 }
 
 #chat-window.mobile #chat-messages-fade::after {
@@ -1176,7 +1176,7 @@ button:focus-visible {
   padding: 10px 16px;
   border-radius: 21px;
   white-space: normal;
-  max-width: var(--info-max-width);
+  max-width: 250px;
   width: max-content;
   text-align: center;
   opacity: 0;
@@ -1753,7 +1753,7 @@ button:focus-visible {
   transform: translateX(-50%);
   width: 100vw;
   height: 200%;
-  background: linear-gradient(to top, black, rgba(0, 0, 0, 0.4), transparent);
+  background: linear-gradient(to top, black, transparent);
   z-index: -1;
   pointer-events: none;
 }
